sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:18: error: ')' expected but 'else' found.
      else{
      ^