sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  var v=0
  var n=getValueCount()-1
  
  for(i <- 1 to getValueCount()-1){
    v = getValue(i)
    
    for(j <- 1 to i){
      
      if(isSmaller(v,getValue(i-j)){
        copy(i-j,i-j+1)
        
        if(i-j == 0){
          setValue(0,v)
        }
      }
      else{
        setValue(i-j,v)
      }
    }
    
  }
}